--- a/dev/conda-release/conda-recipes/oap/meta.yaml
+++ b/dev/conda-release/conda-recipes/oap/meta.yaml
@@ -1,4 +1,4 @@
-{% set OAP_VERSION = "0.9.0" %}
+{% set OAP_VERSION = "1.0.0" %}
 package:
   name: oap
   version: {{ OAP_VERSION }}
@@ -48,6 +48,8 @@ requirements:
     - boost-cpp
     - brotli
     - c-ares
+    - c-compiler
+    - cxx-compiler
     - gflags
     - glog
     - grpc-cpp
@@ -58,7 +60,7 @@ requirements:
     - zstd
     - libhdfs3
     - vmemcache 0.8
-    - memkind 1.10.1.rc2
+    - memkind 1.10.1
     - hpnl 1.0
 
 test:
@@ -107,9 +109,9 @@ about:
       the license section of the installed Conda package and/or the README file) and all notices, disclaimers or license terms
       for third party or open source software included in or with the software.</strong>
       <br/><br/>
-      EULA: <a href="https://github.com/Intel-bigdata/OAP/blob/branch-0.9-spark-3.x/LICENSE.txt" target="_blank">Apache License 2.0</a><br/>
-      Third Party Programs: https://github.com/Intel-bigdata/OAP/blob/branch-0.9-spark-3.x/TPP.txt
+      EULA: <a href="https://github.com/Intel-bigdata/OAP/blob/master/LICENSE.txt" target="_blank">Apache License 2.0</a><br/>
+      Third Party Programs: https://github.com/Intel-bigdata/OAP/blob/master/TPP.txt
       <br/><br/>'
-  dev_url: https://github.com/Intel-bigdata/OAP/blob/branch-0.9-spark-3.x/docs/Developer-Guide.md
-  doc_url: https://github.com/Intel-bigdata/OAP/blob/branch-0.9-spark-3.x/docs/OAP-Installation-Guide.md
+  dev_url: https://github.com/Intel-bigdata/OAP/blob/master/docs/Developer-Guide.md
+  doc_url: https://github.com/Intel-bigdata/OAP/blob/master/docs/OAP-Installation-Guide.md
 
