--- a/dev/conda-release/conda-recipes/memkind/meta.yaml
+++ b/dev/conda-release/conda-recipes/memkind/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: memkind
-  version: 1.10.1.rc2
+  version: 1.10.1
 
 build:
   number: 0
@@ -18,7 +18,7 @@ requirements:
 
 about:
   home: https://github.com/memkind/memkind
-  license: https://github.com/memkind/memkind/blob/v1.10.1.rc2/COPYING
+  license: https://github.com/memkind/memkind/blob/v1.10.1/COPYING
   license_file:
     - COPYING
   summary: The memkind library is a user extensible heap manager built on top of jemalloc which enables control of memory characteristics and a partitioning of the heap between kinds of memory.
@@ -27,6 +27,6 @@ about:
     the license section of the installed Conda package and/or the README file) and all notices, disclaimers or license terms
     for third party or open source software included in or with the software.</strong>
     <br/><br/>
-    EULA: <a href="https://github.com/Intel-bigdata/OAP/blob/branch-0.9-spark-3.x/LICENSE.txt" target="_blank">Apache License 2.0</a><br/>
-    Third Party Programs: https://github.com/Intel-bigdata/OAP/blob/branch-0.9-spark-3.x/TPP.txt
+    EULA: <a href="https://github.com/Intel-bigdata/OAP/blob/master/LICENSE.txt" target="_blank">Apache License 2.0</a><br/>
+    Third Party Programs: https://github.com/Intel-bigdata/OAP/blob/master/TPP.txt
     <br/><br/>'
