[OAP-TOOLS-1]Modify by comments

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: OAP Project
 
 repo_name: 'Fork on GitHub '
-repo_url: https://github.com/HongW2019/hongw2019.github.io.git
+repo_url: https://github.com/oap-project/oap-project.github.io.git
 edit_uri: ""
 
 
