small fix for arrow conda recipes

--- a/dev/conda-release/conda-recipes/arrow/meta.yaml
+++ b/dev/conda-release/conda-recipes/arrow/meta.yaml
@@ -4,7 +4,7 @@ package:
   version: {{ ARROW_VERSION }}
 
 source:
-  path: ../../../thirdparty/arrow2/
+  path: ../../../thirdparty/arrow/
 
 build:
   build:
