Refine the oap conda meta info

--- a/dev/conda-release/conda-recipes/oap/meta.yaml
+++ b/dev/conda-release/conda-recipes/oap/meta.yaml
@@ -110,9 +110,9 @@ about:
       the license section of the installed Conda package and/or the README file) and all notices, disclaimers or license terms
       for third party or open source software included in or with the software.</strong>
       <br/><br/>
-      EULA: <a href="https://github.com/oap-project/oap-tools/blob/oap-1.1/LICENSE.txt" target="_blank">Apache License 2.0</a><br/>
-      Third Party Programs: https://github.com/oap-project/oap-tools/blob/oap-1.1/TPP.txt
+      EULA: <a href="https://github.com/oap-project/oap-tools/blob/branch-1.1-spark-3.x/LICENSE.txt" target="_blank">Apache License 2.0</a><br/>
+      Third Party Programs: https://github.com/oap-project/oap-tools/blob/branch-1.1-spark-3.x/TPP.txt
       <br/><br/>'
-  dev_url: https://github.com/oap-project/oap-tools/blob/oap-1.1/docs/Developer-Guide.md
-  doc_url: https://github.com/oap-project/oap-tools/blob/oap-1.1/docs/OAP-Installation-Guide.md
+  dev_url: https://github.com/oap-project/oap-tools/blob/branch-1.1-spark-3.x/docs/docs/Developer-Guide.md
+  doc_url: https://github.com/oap-project/oap-tools/blob/branch-1.1-spark-3.x/docs/docs/OAP-Installation-Guide.md
 
