--- a/dev/integrations/oap/emr/emr-benchmark-tool/conf/spark/spark-defaults.conf
+++ b/dev/integrations/oap/emr/emr-benchmark-tool/conf/spark/spark-defaults.conf
@@ -26,9 +26,8 @@ spark.sql.hive.metastore.sharedPrefixes com.amazonaws.services.dynamodbv2
 spark.yarn.historyServer.address $(hostname -f):18080
 spark.history.ui.port            18080
 spark.shuffle.service.enabled    true
-spark.yarn.dist.files            /etc/spark/conf/hive-site.xml
 spark.driver.defaultJavaOptions  -XX:OnOutOfMemoryError='kill -9 %p'
-spark.dynamicAllocation.enabled  false
+spark.dynamicAllocation.enabled  true
 spark.blacklist.decommissioning.enabled true
 spark.blacklist.decommissioning.timeout 1h
 spark.resourceManager.cleanupExpiredHost true
@@ -44,21 +43,7 @@ spark.hadoop.fs.s3.getObject.initialSocketTimeoutMilliseconds 2000
 spark.sql.parquet.output.committer.class com.amazon.emr.committer.EmrOptimizedSparkSqlParquetOutputCommitter
 spark.sql.parquet.fs.optimized.committer.optimization-enabled true
 spark.sql.emr.internal.extensions com.amazonaws.emr.spark.EmrSparkSessionExtensions
-spark.executor.memory            6G
-spark.executor.cores             2
-spark.yarn.executor.memoryOverheadFactor 0.1875
-spark.driver.memory              2048M
-spark.executor.defaultJavaOptions -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:OnOutOfMemoryError='kill -9 %p'
-spark.hadoop.yarn.timeline-service.enabled false
-spark.yarn.appMasterEnv.SPARK_PUBLIC_DNS $(hostname -f)
-spark.files.fetchFailure.unRegisterOutputOnHost true
-spark.hadoop.mapreduce.fileoutputcommitter.algorithm.version.emr_internal_use_only.EmrFileSystem 2
-spark.hadoop.mapreduce.fileoutputcommitter.cleanup-failures.ignored.emr_internal_use_only.EmrFileSystem true
-spark.hadoop.fs.s3.getObject.initialSocketTimeoutMilliseconds 2000
-spark.sql.parquet.output.committer.class com.amazon.emr.committer.EmrOptimizedSparkSqlParquetOutputCommitter
-spark.sql.parquet.fs.optimized.committer.optimization-enabled true
-spark.sql.emr.internal.extensions com.amazonaws.emr.spark.EmrSparkSessionExtensions
-spark.executor.memory            6G
+spark.executor.memory            4743M
 spark.executor.cores             2
 spark.yarn.executor.memoryOverheadFactor 0.1875
 spark.driver.memory              2048M
