Add start, stop plasma server

--- a/dev/integrations/oap/emr/emr-benchmark-tool/conf/env.conf
+++ b/dev/integrations/oap/emr/emr-benchmark-tool/conf/env.conf
@@ -7,7 +7,9 @@ SPARK_SQL_PERF_HOME=/opt/benchmark-tools/spark-sql-perf
 TPCDS_KIT_HOME=/opt/benchmark-tools/tpcds-kit
 TPCH_DBGEN_HOME=/opt/benchmark-tools/tpch-dbgen
 HIBENCH_HOME=/opt/benchmark-tools/HiBench
+OAP_HOME=/opt/benchmark-tools/oap
 
+PLASMA_CACHE_SIZE=15000000000
 
 GENERATE_DATA=FALSE
 DEFAULT_ITERATION=1
