--- a/dev/integrations/oap/emr/emr-benchmark-tool/conf/hibench/hadoop.conf
+++ b/dev/integrations/oap/emr/emr-benchmark-tool/conf/hibench/hadoop.conf
@@ -8,7 +8,7 @@ hibench.hadoop.executable     ${hibench.hadoop.home}/bin/hadoop
 hibench.hadoop.configure.dir  ${hibench.hadoop.home}/etc/hadoop
 
 # The root HDFS path to store HiBench data
-hibench.hdfs.master           hdfs://master_hostname:8020
+hibench.hdfs.master           "{%storage%}://{%s3.bucket%}/datagen
 
 
 # Hadoop release provider. Supported value: apache, cdh5, hdp
