Add a new workflow for OAP performance test on EMR

--- a/dev/integrations/oap/emr/emr-benchmark-tool/conf/hibench/spark.conf
+++ b/dev/integrations/oap/emr/emr-benchmark-tool/conf/hibench/spark.conf
@@ -7,8 +7,8 @@ hibench.spark.home       {%spark.home%}
 hibench.spark.master     yarn
 
 # executor number and cores when running on Yarn
-#hibench.yarn.executor.num     {%spark.executor.instances%}
-#hibench.yarn.executor.cores   {%spark.executor.cores%}
+hibench.yarn.executor.num     1
+hibench.yarn.executor.cores   2
 
 # executor and driver memory in standalone & YARN mode
 #spark.executor.memory  {%spark.executor.memory%}g
@@ -18,7 +18,7 @@ hibench.spark.master     yarn
 spark.default.parallelism     ${hibench.default.map.parallelism}
 
 # set spark sql's default shuffle partitions according to hibench's parallelism value
-spark.sql.shuffle.partitions  200
+spark.sql.shuffle.partitions  ${hibench.default.map.parallelism}
 
 #======================================================
 # Spark Streaming
@@ -43,26 +43,3 @@ hibench.streambench.spark.checkpointPath /var/tmp
 
 # whether to use direct approach or not (dafault: true)
 hibench.streambench.spark.useDirectMode true
-
-spark.master                     yarn
-spark.driver.extraClassPath      /usr/lib/hadoop-lzo/lib/*:/usr/lib/hadoop/hadoop-aws.jar:/usr/share/aws/aws-java-sdk/*:/usr/share/aws/emr/goodies/lib/emr-spark-goodies.jar:/usr/share/aws/emr/security/conf:/usr/share/aws/emr/security/lib/*:/usr/share/aws/hmclient/lib/aws-glue-datacatalog-spark-client.jar:/usr/share/java/Hive-JSON-Serde/hive-openx-serde.jar:/usr/share/aws/sagemaker-spark-sdk/lib/sagemaker-spark-sdk.jar:/usr/share/aws/emr/s3select/lib/emr-s3-select-spark-connector.jar:/docker/usr/lib/hadoop-lzo/lib/*:/docker/usr/lib/hadoop/hadoop-aws.jar:/docker/usr/share/aws/aws-java-sdk/*:/docker/usr/share/aws/emr/goodies/lib/emr-spark-goodies.jar:/docker/usr/share/aws/emr/security/conf:/docker/usr/share/aws/emr/security/lib/*:/docker/usr/share/aws/hmclient/lib/aws-glue-datacatalog-spark-client.jar:/docker/usr/share/java/Hive-JSON-Serde/hive-openx-serde.jar:/docker/usr/share/aws/sagemaker-spark-sdk/lib/sagemaker-spark-sdk.jar:/docker/usr/share/aws/emr/s3select/lib/emr-s3-select-spark-connector.jar
-spark.driver.extraLibraryPath    /usr/lib/hadoop/lib/native:/usr/lib/hadoop-lzo/lib/native:/docker/usr/lib/hadoop/lib/native:/docker/usr/lib/hadoop-lzo/lib/native
-spark.executor.extraClassPath    /usr/lib/hadoop-lzo/lib/*:/usr/lib/hadoop/hadoop-aws.jar:/usr/share/aws/aws-java-sdk/*:/usr/share/aws/emr/goodies/lib/emr-spark-goodies.jar:/usr/share/aws/emr/security/conf:/usr/share/aws/emr/security/lib/*:/usr/share/aws/hmclient/lib/aws-glue-datacatalog-spark-client.jar:/usr/share/java/Hive-JSON-Serde/hive-openx-serde.jar:/usr/share/aws/sagemaker-spark-sdk/lib/sagemaker-spark-sdk.jar:/usr/share/aws/emr/s3select/lib/emr-s3-select-spark-connector.jar:/docker/usr/lib/hadoop-lzo/lib/*:/docker/usr/lib/hadoop/hadoop-aws.jar:/docker/usr/share/aws/aws-java-sdk/*:/docker/usr/share/aws/emr/goodies/lib/emr-spark-goodies.jar:/docker/usr/share/aws/emr/security/conf:/docker/usr/share/aws/emr/security/lib/*:/docker/usr/share/aws/hmclient/lib/aws-glue-datacatalog-spark-client.jar:/docker/usr/share/java/Hive-JSON-Serde/hive-openx-serde.jar:/docker/usr/share/aws/sagemaker-spark-sdk/lib/sagemaker-spark-sdk.jar:/docker/usr/share/aws/emr/s3select/lib/emr-s3-select-spark-connector.jar
-spark.executor.extraLibraryPath  /usr/lib/hadoop/lib/native:/usr/lib/hadoop-lzo/lib/native:/docker/usr/lib/hadoop/lib/native:/docker/usr/lib/hadoop-lzo/lib/native
-spark.eventLog.enabled           true
-spark.eventLog.dir               hdfs:///var/log/spark/apps
-spark.history.fs.logDirectory    hdfs:///var/log/spark/apps
-spark.sql.warehouse.dir          hdfs:///user/spark/warehouse
-spark.sql.hive.metastore.sharedPrefixes com.amazonaws.services.dynamodbv2
-spark.yarn.historyServer.address $(hostname -f):18080
-spark.history.ui.port            18080
-spark.shuffle.service.enabled    true
-spark.yarn.dist.files            /etc/spark/conf/hive-site.xml
-spark.driver.defaultJavaOptions  -XX:OnOutOfMemoryError='kill -9 %p'
-spark.dynamicAllocation.enabled  false
-spark.blacklist.decommissioning.enabled true
-spark.blacklist.decommissioning.timeout 1h
-spark.resourceManager.cleanupExpiredHost true
-spark.stage.attempt.ignoreOnDecommissionFetchFailure true
-spark.decommissioning.timeout.threshold 20
-
