[OAP-TOOL-96]Modify Cloud Guide

--- a/integrations/oap/benchmark-tool/tools/plasma/plasmaLaunch.json
+++ b/integrations/oap/benchmark-tool/tools/plasma/plasmaLaunch.json
@@ -6,7 +6,7 @@
    {
      "name": "plasma-store-servicess",
      "number_of_containers": 3,
-     "launch_command": "{%oap.home%}/bin/plasma-store-server -m {%plasma.cache.size%} -s /tmp/plasmaStore -d /mnt/pmem",
+     "launch_command": "{%oap.home%}/bin/plasma-store-server -m {%plasma.cache.size%} -s /tmp/plasmaStore -d /tmp",
      "resource": {
        "cpus": 1,
        "memory": 512
