--- a/dev/conda-release/conda-recipes/HPNL/meta.yaml
+++ b/dev/conda-release/conda-recipes/HPNL/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: hpnl
-  version: 1.0
+  version: 1.1
 
 source:
   path: ../../../thirdparty/HPNL/
@@ -10,7 +10,10 @@ requirements:
     - gcc   [linux]
     - libgcc [linux]
     - cmake 3.11.*
-
+    - boost-cpp 1.64.0
+    
+  run:  
+    - boost-cpp 1.64.0
 
 about:
   home: https://github.com/Intel-bigdata/HPNL
