Sync K8S to master

--- a/integrations/oap/kubernetes/docker/oap-ubuntu/Dockerfile
+++ b/integrations/oap/kubernetes/docker/oap-ubuntu/Dockerfile
@@ -11,7 +11,7 @@
 # limitations under the License.
 #
 
-FROM spark-ubuntu:1.2
+FROM spark-ubuntu:1.2.0
 
 MAINTAINER The Optimized Analyitics Package for Spark Platform (OAP) Authors https://github.com/Intel-bigdata/OAP/
 
@@ -19,6 +19,7 @@ MAINTAINER The Optimized Analyitics Package for Spark Platform (OAP) Authors htt
 ARG OAP_VERSION=1.2.0
 ENV OAP_VERSION                       ${OAP_VERSION}
 ENV OAP_HOME              /opt/home/conda/envs/oap-${OAP_VERSION}
+ENV LD_LIBRARY_PATH                      ${OAP_HOME}/lib:${LD_LIBRARY_PATH}
 
 USER root
 
