--- a/dev/conda-release/conda-recipes/oap/meta.yaml
+++ b/dev/conda-release/conda-recipes/oap/meta.yaml
@@ -20,81 +20,18 @@ requirements:
     - ninja
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
-  host:
-    - aws-sdk-cpp 
-    - boost-cpp >=1.68.0
-    - brotli
-    - bzip2
-    - c-ares
-    - gflags
-    - glog
-    - grpc-cpp >=1.21.4
-    - libprotobuf
-    - clangdev 7
-    - llvmdev 7
-    - libutf8proc
-    - lz4-c
-    - numpy >=1.14
-    - orc  # [unix]
-    - rapidjson
-    - re2
-    - snappy
-    - thrift-cpp >=0.11.0
-    - zlib
-    - zstd
+
 
   run:
-    - numpy >=1.14
-    - aws-sdk-cpp 
-    - boost-cpp
-    - brotli
-    - c-ares
-    - c-compiler
-    - cxx-compiler
-    - gflags
-    - glog
-    - grpc-cpp
-    - lz4-c
-    - re2
-    - snappy
-    - zlib
-    - zstd
     - libhdfs3
+    - gcc_impl_linux-64  7.5.0
+    - gcc_linux-64       7.5.0
+    - gxx_impl_linux-64  7.5.0
+    - gxx_linux-64       7.5.0
+    - curl               7.79.1
+    - openssl            1.1.1
 
 
-test:
-  commands:
-    # headers
-    - test -f $PREFIX/include/arrow/api.h              # [unix]
-    - test -f $PREFIX/include/plasma/client.h          # [unix]
-    - test -f $PREFIX/include/gandiva/engine.h         # [unix]
-    - test -f $PREFIX/include/parquet/api/reader.h     # [unix]
-    - if not exist %LIBRARY_INC%\\arrow\\api.h exit 1            # [win]
-    - if not exist %LIBRARY_INC%\\gandiva\\engine.h exit 1       # [win]
-    - if not exist %LIBRARY_INC%\\parquet\\api\\reader.h exit 1  # [win]
-
-    # shared
-    - test -f $PREFIX/lib/libarrow.so            # [linux]
-    - test -f $PREFIX/lib/libarrow_dataset.so    # [linux]
-    - test -f $PREFIX/lib/libparquet.so          # [linux]
-    - test -f $PREFIX/lib/libgandiva.so          # [linux]
-    - test -f $PREFIX/lib/libplasma.so           # [linux]
-    - test -f $PREFIX/lib/libarrow.dylib         # [osx]
-    - test -f $PREFIX/lib/libarrow_dataset.dylib # [osx]
-    - test -f $PREFIX/lib/libarrow_python.dylib  # [osx]
-    - test -f $PREFIX/lib/libgandiva.dylib       # [osx]
-    - test -f $PREFIX/lib/libparquet.dylib       # [osx]
-    - test -f $PREFIX/lib/libplasma.dylib        # [osx]
-    - if not exist %PREFIX%\\Library\\bin\\arrow.dll exit 1         # [win]
-    - if not exist %PREFIX%\\Library\\bin\\arrow_dataset.dll exit 1 # [win]
-    - if not exist %PREFIX%\\Library\\bin\\arrow_flight.dll exit 1  # [win]
-    - if not exist %PREFIX%\\Library\\bin\\arrow_python.dll exit 1  # [win]
-    - if not exist %PREFIX%\\Library\\bin\\parquet.dll exit 1       # [win]
-    - if not exist %PREFIX%\\Library\\bin\\gandiva.dll exit 1       # [win]
-
-    # conda tools
-    - conda inspect linkages -p $PREFIX $PKG_NAME  # [not win]
-    - conda inspect objects -p $PREFIX $PKG_NAME   # [osx]
 
 about:
   summary: Optimized Analytics Packages for Spark is a project to optimize Spark by providing optimized implmentation of packages in various aspects including cache, shuffle, and so on.
