[OAP-TOOLS-104]Small update for build scripts

--- a/dev/conda-release/conda-recipes/conda_env_cpp.yml
+++ b/dev/conda-release/conda-recipes/conda_env_cpp.yml
@@ -2,6 +2,6 @@ gcc_impl_linux-64=7.5.0
 gcc_linux-64=7.5.0
 gxx_impl_linux-64=7.5.0
 gxx_linux-64=7.5.0
-curl=7.79.1
-openssl=1.1.11
+curl=7.78
 clangdev=7
+python=3.7
