--- a/integrations/oap/kubernetes/docker/spark-ubuntu/Dockerfile
+++ b/integrations/oap/kubernetes/docker/spark-ubuntu/Dockerfile
@@ -64,11 +64,11 @@ RUN /opt/home/conda/bin/conda config --system --set channel_priority strict \
 ENV JAVA_HOME            /opt/home/jdk
 ENV PATH                          ${JAVA_HOME}/bin:${PATH}
 
-RUN wget https://enos.itcollege.ee/~jpoial/allalaadimised/jdk8/jdk-8u301-linux-x64.tar.gz  && \
-    gunzip jdk-8u301-linux-x64.tar.gz && \
-    tar -xf jdk-8u301-linux-x64.tar -C /opt/home && \
-    rm jdk-8u301-linux-x64.tar && \
-    ln -s /opt/home/jdk1.8.0_301 /opt/home/jdk
+RUN wget https://devops.egov.org.in/Downloads/jdk/jdk-8u192-linux-x64.tar.gz  && \
+    gunzip jdk-8u192-linux-x64.tar.gz && \
+    tar -xf jdk-8u192-linux-x64.tar -C /opt/home && \
+    rm jdk-8u192-linux-x64.tar && \
+    ln -s /opt/home/jdk1.8.0_192 /opt/home/jdk
     
 ARG SPARK_VERSION=3.1.1
 
